# bendy-bus

./: .gitlab-ci.yml  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
bendy-bus/: bendy-bus-lcov  dbus-daemon.c  logging.c  main.c  program-wrapper.c  program-wrapper.h
bendy-bus-lint/: main.c
bendy-bus-viz/: main.c
bendy-bus/docs/manual/: Makefile.am
bendy-bus/docs/manual/C/: bendy-bus-lcov.page  bendy-bus-lint.page  bendy-bus-viz.page  bendy-bus.page  data-structures.page  expressions.page  functions.page  index.page  language.page  objects.page  preconditions.page  simulator.page  statements.page  structure.page  transitions.page
dbus-simulator/: dbus-daemon.c  dbus-daemon.h  logging.c  logging.h  main.c  program-wrapper.c  program-wrapper.h  test-program.c  test-program.h
dbus-simulator-lint/: main.c
dfsm/: dfsm-ast-data-structure.c  dfsm-ast-data-structure.h  dfsm-ast-expression-binary.c  dfsm-ast-expression-binary.h  dfsm-ast-expression-data-structure.c  dfsm-ast-expression-data-structure.h  dfsm-ast-expression-function-call.c  dfsm-ast-expression-function-call.h  dfsm-ast-expression-unary.c  dfsm-ast-expression-unary.h  dfsm-ast-expression.c  dfsm-ast-expression.h  dfsm-ast-node.c  dfsm-ast-node.h  dfsm-ast-object.c  dfsm-ast-object.h  dfsm-ast-precondition.c  dfsm-ast-precondition.h  dfsm-ast-statement-assignment.c  dfsm-ast-statement-assignment.h  dfsm-ast-statement-emit.c  dfsm-ast-statement-emit.h  dfsm-ast-statement-reply.c  dfsm-ast-statement-reply.h  dfsm-ast-statement-throw.c  dfsm-ast-statement-throw.h  dfsm-ast-statement.c  dfsm-ast-statement.h  dfsm-ast-transition.c  dfsm-ast-transition.h  dfsm-ast-variable.c  dfsm-ast-variable.h  dfsm-ast.c  dfsm-ast.h  dfsm-bison.y  dfsm-dbus-output-sequence.c  dfsm-dbus-output-sequence.h  dfsm-environment-functions.h  dfsm-environment.c  dfsm-environment.h  (+22 more)
dfsm/docs/reference/: Makefile.am  dfsm-docs.xml  dfsm-sections.txt
dfsm/tests/: ast.c  fuzzing.c  parser-test.machine  reachability-test.machine  reachability.c  simple-test.machine  simple-test.xml  simulation.c  test-output-sequence.c  test-output-sequence.h  test-utils.c  test-utils.h
libdfsm/: dfsm-ast.c  dfsm-ast.h  dfsm-flex.l  dfsm-parser.c  dfsm-parser.h  dfsm-utils.h  dfsm.h
machines/: eds-address-book.machine  eds-address-book.xml  eds-address-book_full.machine  hamster-server.machine  hamster-server.xml  telepathy-cm.machine  telepathy-cm.xml  telepathy-cm_full.machine  telepathy-cm_trimmed.machine
po/: POTFILES.in  POTFILES.skip
